--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -1,3 +1,5 @@
 // Branding overrides
 //
 // Copy variables from `_branding.scss` to this file to override default values.
+
+$login-bg: url('https://raw.githubusercontent.com/katavie/quill/master/app/client/assets/boston.mp4');
