Start changing teams to tracks

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -2,4 +2,4 @@
 //
 // Copy variables from `_branding.scss` to this file to override default values.
 
-$login-bg: url('https://raw.githubusercontent.com/katavie/quill/master/app/client/assets/boston.mp4');
+$login-bg: url('http://www.mahacks.com/assets/boston.mp4');
