--- a/app/client/views/team/team.html
+++ b/app/client/views/team/team.html
@@ -1,6 +1,6 @@
 <div id="team" class="page">
   <div class="divided title">
-    Team
+    Tracks
   </div>
   <div class="ui stackable centered page grid">
     <div class="column">
