--- a/app/client/views/sidebar/sidebar.html
+++ b/app/client/views/sidebar/sidebar.html
@@ -31,10 +31,10 @@
 
     <div
       ui-sref-active="active"
-      ui-sref="app.team"
+      ui-sref="app.tracks"
       ng-show="!currentUser.status.declined"
       class="item">
-      Team
+      Tracks
     </div>
 
     <div
