--- a/app/client/views/sidebar/sidebar.html
+++ b/app/client/views/sidebar/sidebar.html
@@ -31,7 +31,7 @@
 
     <div
       ui-sref-active="active"
-      ui-sref="app.tracks"
+      ui-sref="app.team"
       ng-show="!currentUser.status.declined"
       class="item">
       Tracks
