--- a/app/client/views/team/team.html
+++ b/app/client/views/team/team.html
@@ -12,75 +12,15 @@
 
       <div class="ui segment">
         <div
-          ng-show="!user.teamCode && !regIsOpen">
-          <p>
-            {{ TEAM.NO_TEAM_REG_CLOSED }}
-          </p>
-        </div>
-        <div
-          class="ui form"
-          ng-show="!user.teamCode && regIsOpen">
+          class="ui form">
 
           <div class="title">
-            Join or Create a Team
+            Check out our tracks
           </div>
 
           <br>
 
-          <div class="field">
-            <input
-              class="ui input"
-              type="text"
-              placeholder="Choose your team name..."
-              ng-model="code">
-          </div>
-
-          <div class="field">
-            <button
-              class="ui fluid pink button"
-              ng-click="joinTeam()">
-              Join or Create Team
-            </button>
-          </div>
-
-        </div>
-
-        <div
-          ng-show="user.teamCode">
-          <div class="form">
-            <div class="title">
-              Your Team Name:
-            </div>
-          </div>
-          <br>
-          <div class="subheader">
-            {{user.teamCode}}
-          </div>
-
-          <br />
-
-          <div class="ui divider"></div>
-
-          <div class="form">
-            <div class="title">
-              Your Team:
-            </div>
-          </div>
-
-          <p
-            ng-repeat="user in teammates"
-            class="item">
-            {{user.profile.name || 'Somebody (has not filled out their profile!)'}}
-          </p>
-
-          <div
-            ng-show="regIsOpen">
-            <div class="ui divider"></div>
-
-            <button
-              class="ui fluid red button"
-              ng-click="leaveTeam()">Leave Team</button>
-          </div>
+          <p>Tracks are areas we encourage you to create entrepreneurial and technological solutions for. Several of our sponsors offer prizes for projects in each track. Express your interest in some tracks to help us make MAHacks's brainstorming session better suited for you.
 
         </div>
 
