Change bg img, try tracks

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -2,4 +2,5 @@
 //
 // Copy variables from `_branding.scss` to this file to override default values.
 
-$login-bg: url('http://www.mahacks.com/assets/boston.mp4');
+//$login-bg: url('http://www.mahacks.com/assets/boston.mp4');
+$login-bg: url('http://www.layoverguide.com/wp-content/uploads/2010/01/Boston-skyline.jpg');
