--- a/app/client/views/tracks/tracks.html
+++ b/app/client/views/tracks/tracks.html
@@ -18,9 +18,7 @@
             Check out our tracks
           </div>
 
-          <br>
-
-          <p>Tracks are areas we encourage you to create entrepreneurial and technological solutions for. Several of our sponsors offer prizes for projects in each track. Express your interest in some tracks to help us make MAHacks's brainstorming session better suited for you.
+          <p><strong>Tracks are areas we encourage you to create entrepreneurial and technological solutions for. Several of our sponsors offer prizes for projects in each track. Express your interest in some tracks to help us make MAHacks's brainstorming session better suited for you.</strong></p>
 
         </div>
 
